# pgx-named-columns

./: Cargo.toml  README.md
src/: lib.rs
tests/: alphabet.rs
