[package]
name = "pgx-named-columns"
version = "0.1.0"
authors = ["Edgar Onghena <dev@edgar.bzh>"]
license = "MIT OR Apache-2.0"
description = "Declare reusable pgx rows using a structure instead of a tuple with the name!() decl-macro"
repository = "https://github.com/edgarogh/pgx-named-columns/"
keywords = ["pgx", "postgresql"]
categories = ["database"]
edition = "2018"

[lib]
doctest = false
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
pgx = { version = "0.3.3", features = ["pg13"] }
